@@ -26,7 +26,9 @@ Maintenance
 * New modality manufacturer: "GE" for GE Healthcare EA and AW
 * Executing a query/retrieve from the REST API now creates a job
 * Fix: Closing DICOM associations after running query/retrieve from REST API
-* Fix: Allow creation of MONOCHROME1 greyscale images in tools/create-dicom
+* Fix: Allow creation of MONOCHROME1 grayscale images in tools/create-dicom
+* Remove invalid characters from badly-encoded UTF-8 strings (impacts PostgreSQL)
+
 
 Version 1.4.2 (2018-09-20)
 ==========================
